--- a/Web.config
+++ b/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="con" connectionString="Data Source=RAGINEEGUPTA;Initial Catalog=elibraryDB;Integrated Security=true" />
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
